# libosmo-asn1-tcap

./: .checkpatch.conf  .gitignore  .gitreview  Makefile.am  README.md  TODO-RELEASE  asn1c-fixup.patch  configure.ac  libosmo-asn1-tcap.pc.in  move-asn1-header-files.sh
asn/: tcap.asn
contrib/: jenkins.sh
debian/: changelog  control  libosmo-asn1-tcap-dev.install  libosmo-asn1-tcap1.install  rules
include/: AARE-apdu.h  AARQ-apdu.h  ABRT-apdu.h  ABRT-source.h  AUDT-apdu.h  Abort.h  Associate-result.h  Associate-source-diagnostic.h  Begin.h  Component.h  ComponentPortion.h  Continue.h  DestTransactionID.h  Dialog1.h  DialogueOC.h  DialoguePDU.h  DialoguePortion.h  ERROR.h  End.h  ErrorCode.h  ExternalPDU.h  GeneralProblem.h  Invoke.h  InvokeIdType.h  InvokeProblem.h  Makefile.am  OPERATION.h  OrigTransactionID.h  P-AbortCause.h  Parameter.h  RLRE-apdu.h  RLRQ-apdu.h  Reason.h  Reject.h  Release-request-reason.h  Release-response-reason.h  ReturnError.h  ReturnErrorProblem.h  ReturnResult.h  ReturnResultProblem.h  (+3 more)
include/osmocom/: Makefile.am
include/osmocom/tcap/: ANY.h  BIT_STRING.h  GraphicString.h  INTEGER.h  Makefile.am  NULL.h  NativeInteger.h  OBJECT_IDENTIFIER.h  OCTET_STRING.h  OPEN_TYPE.h  ObjectDescriptor.h  TCAP_AARE-apdu.h  TCAP_AARQ-apdu.h  TCAP_ABRT-apdu.h  TCAP_ABRT-source.h  TCAP_AUDT-apdu.h  TCAP_Abort.h  TCAP_Associate-result.h  TCAP_Associate-source-diagnostic.h  TCAP_Begin.h  TCAP_Component.h  TCAP_ComponentPortion.h  TCAP_Continue.h  TCAP_DestTransactionID.h  TCAP_Dialog1.h  TCAP_DialoguePDU.h  TCAP_DialoguePortion.h  TCAP_ERROR.h  TCAP_EXTERNAL.h  TCAP_End.h  TCAP_ErrorCode.h  TCAP_ExternalPDU.h  TCAP_GeneralProblem.h  TCAP_Invoke.h  TCAP_InvokeIdType.h  TCAP_InvokeProblem.h  TCAP_OPERATION.h  TCAP_OrigTransactionID.h  TCAP_P-AbortCause.h  TCAP_Parameter.h  (+31 more)
src/: AARE-apdu.c  AARQ-apdu.c  ABRT-apdu.c  ABRT-source.c  AUDT-apdu.c  Abort.c  Associate-result.c  Associate-source-diagnostic.c  Begin.c  Component.c  ComponentPortion.c  Continue.c  DestTransactionID.c  Dialog1.c  DialogueOC.c  DialoguePDU.c  DialoguePortion.c  ERROR.c  End.c  ErrorCode.c  ExternalPDU.c  GeneralProblem.c  Invoke.c  InvokeIdType.c  InvokeProblem.c  Makefile.am  OPERATION.c  OrigTransactionID.c  P-AbortCause.c  Parameter.c  RLRE-apdu.c  RLRQ-apdu.c  Reason.c  Reject.c  Release-request-reason.c  Release-response-reason.c  ReturnError.c  ReturnErrorProblem.c  ReturnResult.c  ReturnResultProblem.c  (+5 more)
src/skel/: ANY.c  ANY_ber.c  BIT_STRING.c  BIT_STRING_print.c  BIT_STRING_rfill.c  GraphicString.c  INTEGER.c  INTEGER_ber.c  INTEGER_print.c  INTEGER_rfill.c  NULL.c  NULL_ber.c  NULL_print.c  NULL_rfill.c  NativeInteger.c  NativeInteger_ber.c  NativeInteger_print.c  NativeInteger_rfill.c  OBJECT_IDENTIFIER.c  OBJECT_IDENTIFIER_print.c  OBJECT_IDENTIFIER_rfill.c  OCTET_STRING.c  OCTET_STRING_ber.c  OCTET_STRING_print.c  OCTET_STRING_rfill.c  OPEN_TYPE.c  OPEN_TYPE_ber.c  ObjectDescriptor.c  asn_SEQUENCE_OF.c  asn_SET_OF.c  asn_application.c  asn_bit_data.c  asn_codecs_prim.c  asn_codecs_prim_ber.c  asn_internal.c  asn_random_fill.c  ber_decoder.c  ber_tlv_length.c  ber_tlv_tag.c  constr_CHOICE.c  (+16 more)
tests/: Makefile.am  testsuite.at
tests/parse/: Makefile.am  tcap_parse_test.c  tcap_parse_test.ok
