osmo_asn1_tcap_HEADERS = \
	ExternalPDU.h	\
	Dialog1.h	\
	TCMessage.h	\
	Unidirectional.h	\
	Begin.h	\
	End.h	\
	Continue.h	\
	Abort.h	\
	Reason.h	\
	DialoguePortion.h	\
	DialogueOC.h	\
	OrigTransactionID.h	\
	DestTransactionID.h	\
	P-AbortCause.h	\
	ComponentPortion.h	\
	Component.h	\
	Invoke.h	\
	Parameter.h	\
	ReturnResult.h	\
	ReturnError.h	\
	Reject.h	\
	InvokeIdType.h	\
	OPERATION.h	\
	ERROR.h	\
	GeneralProblem.h	\
	InvokeProblem.h	\
	ReturnResultProblem.h	\
	ReturnErrorProblem.h	\
	ErrorCode.h

osmo_asn1_tcapdir = $(includedir)/osmocom/tcap

